CI: install zkutil

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,6 +15,7 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: 12
+      - run: cargo install zkutil
       - run: yarn install
       - run: yarn changeTreeHeight
       - run: yarn test
