--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,6 @@ PRIVATE_KEY=
 
 # for verification
 ETHERSCAN_KEY=
+REAL_SPENT_NOTE=
+REAL_SPENT_NOTE_DEPOSIT_BLOCK=11490929
+REAL_SPENT_NOTE_WITHDRAWAL_BLOCK=11491033
